Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50733

WinRT/Desktop: QToolTip issues

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.8.0 Beta
    • 5.6.0 Beta
    • None
    • Windows 10, MSVC2015/64
    • WinRT
    • e9b51781d0dd8badda301da61b08735c256313ca

    Description

      Creating a ToolTip does not show the text. Latest after closing the tooltip test applications crash.

      It seems that close() does not actually remove the tooltip-window from the stack, even though it doesn't show anything, which then causes focus handling to become invalid and cause crashes.

      This can be reproduced with
      qt5\qtbase\examples\widgets\widgets\charactermap\
      qt5\qtbase\examples\widgets\widgets\tooltips\

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mkalinow Maurice Kalinowski
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes